[project]
name = "gnr"
version = "0.1.0"
description = "Grid Node Registry"
readme = "README.md"
authors = [
    { name = "Jessica Millar", email = "jessica.lynn.millar@gmail.com" }
]
requires-python = ">=3.12,<3.13.0"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.123.0",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
gnr = "gnr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
